--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,26 @@
 .container {
     display: flex;
-
-    width: 100%;
+    height: 100vh;
+    /* width: 100%; */
 }
 
 .text-container {
     flex: 1;
-    margin-left: 20px;
+    display: flex;
+
+    align-items: center;
+}
+
+.text {
+    line-height: 2;
+    margin: 20px 0;
+}
+
+.img-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .img-container img {
@@ -16,9 +30,15 @@
 }
 
 .customer-review h2 {
-    margin-top: 400px;
+    margin-top: 300px;
 }
 
 .customer-review button {
-    margin-top: 200px;
+    margin-top: 100px;
+}
+
+.reviews {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
