--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,8 +20,10 @@ nav {
     margin-left: 10px;
     color: #535351;
     text-decoration: none;
+    border-bottom: 1px solid #8e8d8a;
 }
 
 nav .link:hover {
     background-color: #d8c3a5;
+    border-bottom: 3px solid #e98074;
 }
